--- a/package.json
+++ b/package.json
@@ -2,32 +2,25 @@
   "name": "hickam-website",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://austinmutschler.github.io/hickam-website",
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.4",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "tailwindcss": "^3.3.3"
-  },
   "scripts": {
-    "start": "react-scripts start",
+    "start:dev": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -41,5 +34,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@3.6.4",
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  }
 }
