--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hickam-website",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://austinmutschler.github.io/",
+  "homepage": "https://hickam.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
